--- a/BabyWorldProject/Views/Cart/Index.cshtml
+++ b/BabyWorldProject/Views/Cart/Index.cshtml
@@ -18,7 +18,7 @@
 <div class="row">
     <div class="col-sm-3">
 
-<label>OrderID:</label>
+<label>Nishid Id:</label>
 <input type="text" class="form-control" id="txtOrderID" placeholder="Enter Your OrderId" />
 <br />
 <label>ProductID:</label>
